--- a/src/pages/Catalog/Tea/Tea-Filters/Tea-Filters.scss
+++ b/src/pages/Catalog/Tea/Tea-Filters/Tea-Filters.scss
@@ -1,78 +1,78 @@
-.tea-filters{
-    &-blocks{
-        margin-top: 77px;
-        z-index: 0;
-        &-top{
-            display: flex;
-            gap: 20px;
-            flex-wrap: wrap;
-        }
-        &-bottom{
-            margin-top: 21px;
-            gap: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            z-index: 20;
-        }
-        &-item > p{
-            margin-top: 16px
-        }
-        &-item > img{
-            margin-top: 20px;
-        }
-        &-item:hover{
-            cursor: pointer;
-            box-shadow: 0px 0px 21.2553px rgba(40, 39, 39, 0.25);
-        }
-        &-item{
-            width: 280px;
-            z-index: 100;
-            text-align: center;
-            height: 227px;
-            background: #FFFFFF;
-            box-shadow: 0px 0px 21.2553px rgba(149, 149, 149, 0.25);
-            border-radius: 14.1702px;
-        }
+.tea-filters {
+  &-blocks {
+    margin-top: 77px;
+    z-index: 0;
+    &-top {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
     }
-    // &-inner{
-        // }
-    &-right{
-        &-kettle{
-            background-image: url('../../../../assets/Catalog/Tea/Filters/filters-back.png');
-            min-height: 300px;
-            background-repeat: no-repeat;
-        }
+    &-bottom {
+      margin-top: 21px;
+      gap: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      z-index: 20;
     }
+    &-item > p {
+      margin-top: 16px;
+    }
+    &-item > img {
+      margin-top: 20px;
+    }
+    &-item:hover {
+      cursor: pointer;
+      box-shadow: 0px 0px 21.2553px rgba(40, 39, 39, 0.25);
+    }
+    &-item {
+      width: 280px;
+      z-index: 100;
+      text-align: center;
+      height: 227px;
+      background: #ffffff;
+      box-shadow: 0px 0px 21.2553px rgba(149, 149, 149, 0.25);
+      border-radius: 14.1702px;
+    }
+  }
+  // &-inner{
+  // }
+  &-right {
+    &-kettle {
+      background-image: url("../../../../assets/Catalog/Tea/Filters/filters-back.png");
+      min-height: 300px;
+      background-repeat: no-repeat;
+    }
+  }
 }
-.tea-filters-kettle{
-    background-position-y: -30px;
-    position: absolute;
-    width: 490px;
-    // @media (max-width: 1200px) {
-    //   display: none;
-    // }
-    transform: translateY(-106px);
-    right: 0;
-    z-index: -0;
-    background-image: url("../../../../assets/Catalog/Tea/Filters/filters-back.png");
-    background-repeat: no-repeat;
-    height: 433px;
-    margin-left: auto;
+.tea-filters-kettle {
+  background-position-y: -30px;
+  position: absolute;
+  width: 490px;
+  // @media (max-width: 1200px) {
+  //   display: none;
+  // }
+  transform: translateY(-106px);
+  right: 0;
+  z-index: -0;
+  background-image: url("../../../../assets/Catalog/Tea/Filters/filters-back.png");
+  background-repeat: no-repeat;
+  height: 433px;
+  margin-left: auto;
 }
-.tea-filters-machine{
-    background-position-y: -30px;
-    position: absolute;
-    width: 650px;
-    // @media (max-width: 1200px) {
-    //   display: none;
-    // }
-    transform: translateY(-120px);
-    background-size: 630px;
-    // mix-blend-mode:darken;
-    right: 0;
-    z-index: -0.5;
-    background-image: url("../../../../assets/Catalog/Wending/kisspng-latte-macchiato-espresso-coffee-cappuccino-jura-giga-5-aluminium-kavos-inovai-5bf2913b055f41\ 1.svg");
-    background-repeat: no-repeat;
-    height: 633px;
-    // margin-left: auto;
+.tea-filters-machine {
+  background-position-y: -30px;
+  position: absolute;
+  width: 650px;
+  // @media (max-width: 1200px) {
+  //   display: none;
+  // }
+  transform: translateY(-120px);
+  background-size: 630px;
+  // mix-blend-mode:darken;
+  right: 0;
+  z-index: -0.5;
+  background-image: url("../../../../assets/Catalog/Wending/kisspng-latte-macchiato-espresso-coffee-cappuccino-jura-giga-5-aluminium-kavos-inovai-5bf2913b055f41\ 1.svg");
+  background-repeat: no-repeat;
+  height: 633px;
+  // margin-left: auto;
 }
